--- a/booking3.html
+++ b/booking3.html
@@ -33,11 +33,11 @@
         </header>
 
         <nav>
-            <a href="main.html">HOME</a>
-            <a href="about.html">ABOUT</a>
-            <a href="service.html">SERVICE</a>
-            <a href="booking.html">BOOKING</a>
-            <a href="contact.html">CONTACT</a>
+          <a href="index.html">HOME</a>
+          <a href="about.html">ABOUT</a>
+          <a href="service.html">SERVICE</a>
+          <a href="booking.html">BOOKING</a>
+          <a href="contact.html">CONTACT</a>
             
 
 
