--- a/confirm.html
+++ b/confirm.html
@@ -26,7 +26,7 @@
         </header>
 
         <nav>
-            <a href="main.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="about.html">ABOUT</a>
             <a href="service.html">SERVICE</a>
             <a href="booking.html">BOOKING</a>
@@ -53,7 +53,7 @@
 
             
         
-              <button><a href="main.html">Back</a></button>
+              <button><a href="index.html">Back</a></button>
 
 
 
