--- a/service.html
+++ b/service.html
@@ -27,7 +27,7 @@
         </header>
 
         <nav>
-            <a href="main.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="about.html">ABOUT</a>
             <a href="service.html">SERVICE</a>
             <a href="booking.html">BOOKING</a>
