--- a/confirm.html
+++ b/confirm.html
@@ -60,7 +60,7 @@
 
         </main>
 
-        <footer></footer>
+        <footer><p>515 St. Patrick St, Ottawa, ON K1N 5H3</p></footer>
 
     </div>
     
