--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 
         </main>
 
-        <footer></footer>
+        <footer>
+            <p>515 St. Patrick St, Ottawa, ON K1N 5H3</p>
+        </footer>
 
     </div>
     
