--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
         
 
-        <footer></footer>
+        <footer><p>515 St. Patrick St, Ottawa, ON K1N 5H3</p></footer>
 
     </div>
     
