--- a/booking2.html
+++ b/booking2.html
@@ -88,7 +88,7 @@
 
         </main>
 
-        <footer></footer>
+        <footer><p>515 St. Patrick St, Ottawa, ON K1N 5H3</p></footer>
 
     </div>
     
