--- a/booking3.html
+++ b/booking3.html
@@ -78,7 +78,7 @@
 
         </main>
 
-        <footer></footer>
+        <footer><p>515 St. Patrick St, Ottawa, ON K1N 5H3</p></footer>
 
     </div>
     
