--- a/service.html
+++ b/service.html
@@ -53,7 +53,7 @@
 
         </main>
 
-        <footer></footer>
+        <footer><p>515 St. Patrick St, Ottawa, ON K1N 5H3</p></footer>
 
     </div>
     
